--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           class="w-[80%] h-[100%] mb-8 flex flex-col justify-start items-center text-slate-800"
         >
           <div>
-            <p class="font-bold text-3xl underline">My 123 Alarm</p>
+            <p class="font-bold text-3xl underline">My Alarm</p>
           </div>
           <div class="mt-6 w-[100%] font-semibold text-xl">
             <ul id="list" class="list-disc list-inside"></ul>
