--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
           class="w-[80%] h-[100%] mb-8 flex flex-col justify-start items-center text-slate-800"
         >
           <div>
-            <p class="font-bold text-3xl underline">My Alarm</p>
+            <p class="font-bold text-3xl  underline">My Alarm</p>
           </div>
           <div class="mt-6 w-[100%] font-semibold text-xl">
-            <ul id="list" class="list-disc list-inside"></ul>
+            <ul id="list" class="list-disc list-inside">
+			</ul>
           </div>
         </div>
       </div>
@@ -63,3 +64,9 @@
     <script src="./script/script.js"></script>
   </body>
 </html>
+<!-- 
+npm install
+npm install tailwindcss
+npx tailwindcss init
+npx tailwindcss -i ./src/tailwind.css -o ./dist/input.css --watch 
+-->
