--- a/index.html
+++ b/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alarm Clock</title>
-    <link rel="stylesheet" href="./dist/input.css" />
-    <link rel="stylesheet" href="./dist/style.css" />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0" />
+        <title>Alarm Clock</title>
+        <link
+            rel="stylesheet"
+            href="./dist/input.css" />
+        <link
+            rel="stylesheet"
+            href="./dist/style.css" />
+    </head>
 
-  <body
-    class="bg-gradient-to-tr from-indigo-400 from-10% via-sky-600 via-30% to-emerald-400 to-90% w-screen h-screen font-mono"
-  >
-    <div class="clock flex justify-center items-center h-[100%]">
-      <div
-        class="glass h-[550px] w-[350px] shadow-2xl rounded-2xl flex flex-col justify-start items-center"
-      >
+    <body
+        class="bg-gradient-to-tr from-indigo-400 from-10% via-sky-600 via-30% to-emerald-400 to-90% w-screen h-screen font-mono relative">
         <div
-          class="my-3 w-[80%] text-slate-800 flex flex-col justify-center items-center"
-        >
-          <div class="mb-4 rounded-lg">
-            <h1 class="font-bold text-4xl font-mono mx-auto">
-              Alarm Clock
-            </h1>
-          </div>
-          <div class="font-bold text-4xl flex justify-center items-center my-3">
-            <span class="h1 shadow-xl rounded-lg"></span>
-            <span class="h2 shadow-xl rounded-lg"></span>
-            <span class="time0">:</span>
-            <span class="m1 shadow-xl rounded-lg"></span>
-            <span class="m2 shadow-xl rounded-lg"></span>
-            <span class="time0">:</span>
-            <span class="s1 shadow-xl rounded-lg"></span>
-            <span class="s2 shadow-xl rounded-lg"></span>
-          </div>
-          <div
-            class="flex font-semibold my-5 justify-between items-center w-[100%] p-2"
-          >
-            <div class="">
-              <input class="bg-slate-800" type="time" name="time" id="alarm" />
-            </div>
+            class="wakeup absolute z-[-100] invisible rounded-2xl bg-gradient-to-tr from-indigo-400 from-10% via-sky-600 via-30% to-emerald-400 to-90% w-[300px] h-[250px] top-[20%] left-[50%] translate-x-[-50%] flex flex-col justify-between p-4 items-center shadow-2xl">
+            <p class="font-bold text-4xl">Wake up!</p>
+            <span class="alarmTime text-4xl mt-[-20px]"></span>
+            <img
+                class="h-[70px] w-[70px]"
+                src="./icons/alarm-clock.png"
+                alt="" />
             <button
-              class="text-emerald-100 bg-slate-800 hover:bg-slate-300 hover:text-slate-800 hover:font-bold rounded-2xl px-4 py-1 mt-4 shadow-lg"
-              type="button"
-            >
-              Set my Alarm
+                type="button"
+                class="closeButton bg-emerald-100 px-3 rounded-2xl mt-4">
+                Cancel
             </button>
-          </div>
         </div>
-        <div
-          class="w-[80%] h-[100%] mb-8 flex flex-col justify-start items-center text-slate-800"
-        >
-          <div>
-            <p class="font-bold text-3xl  underline">My Alarm</p>
-          </div>
-          <div class="mt-6 w-[100%] font-semibold text-xl">
-            <ul id="list" class="list-disc list-inside">
-			</ul>
-          </div>
+        <div class="clock flex justify-center items-center h-[100%]">
+            <div
+                class="glass h-[550px] w-[350px] shadow-2xl rounded-2xl flex flex-col justify-start items-center">
+                <div
+                    class="my-3 w-[80%] text-slate-800 flex flex-col justify-center items-center">
+                    <div class="mb-4 rounded-lg">
+                        <h1 class="font-bold text-4xl font-mono mx-auto">
+                            Alarm Clock
+                        </h1>
+                    </div>
+                    <div
+                        class="font-bold text-4xl flex justify-center items-center my-3">
+                        <span class="h1 shadow-xl rounded-lg"></span>
+                        <span class="h2 shadow-xl rounded-lg"></span>
+                        <span class="time0">:</span>
+                        <span class="m1 shadow-xl rounded-lg"></span>
+                        <span class="m2 shadow-xl rounded-lg"></span>
+                        <span class="time0">:</span>
+                        <span class="s1 shadow-xl rounded-lg"></span>
+                        <span class="s2 shadow-xl rounded-lg"></span>
+                    </div>
+                    <div class="font-bold text-4xl">
+                        <span class="ampm shadow-xl rounded-lg">A</span>
+                        <span class="s2 shadow-xl rounded-lg">M</span>
+                    </div>
+                    <div
+                        class="flex font-semibold my-5 justify-between items-center w-[100%] p-2">
+                        <div class="">
+                            <input
+                                class="bg-slate-800 w-[110px] rounded-2xl px-4 py-1 shadow-lg text-white font-bold hover:scale-110"
+                                type="time"
+                                name="time"
+                                id="alarm"
+                                placeholder="00:10" />
+                        </div>
+                        <button
+                            class="text-white bg-slate-800 hover:font-bold rounded-2xl px-4 py-1 shadow-lg hover:scale-110"
+                            type="button"
+                            id="setButton">
+                            Set Alarm
+                        </button>
+                    </div>
+                </div>
+                <div
+                    class="w-[80%] h-[100%] mb-8 flex flex-col justify-start items-center text-slate-800">
+                    <div>
+                        <p class="font-bold text-3xl underline">My Alarm</p>
+                    </div>
+                    <div class="mt-6 w-[100%] font-semibold text-xl">
+                        <ul
+                            id="list"
+                            class="list-disc list-inside"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <script src="./script/script.js"></script>
-  </body>
+        <script src="./script/script.js"></script>
+    </body>
 </html>
 <!-- 
 npm install
