--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body class="w-screen h-screen font-mono relative">
         <div
-            class="wakeup absolute z-[-100] invisible rounded-2xl bg-gradient-to-tr from-indigo-400 from-10% via-sky-600 via-30% to-emerald-400 to-90% w-[300px] h-[250px] top-[20%] left-[50%] translate-x-[-50%] flex flex-col justify-between p-4 items-center shadow-2xl">
+            class="wakeup absolute z-[-100] invisible rounded-2xl bg-gradient-to-tr from-indigo-400 from-10% via-slate-100 via-30% to-emerald-400 to-90% w-[300px] h-[250px] top-[20%] left-[50%] translate-x-[-50%] flex flex-col justify-between p-4 items-center shadow-2xl">
             <p class="font-bold text-4xl">Wake up!</p>
             <span class="alarmTime text-4xl mt-[-20px]"></span>
             <img
